module users and masters has migrated to api.php

--- a/resources/css/lead.css
+++ b/resources/css/lead.css
@@ -18,6 +18,18 @@
     @apply text-[#05261B] bg-[#CFE7DE] p-1 rounded-sm ml-1 font-bold;
 }
 
-.nav-leads-active{
-    @apply border-b-4 border-b-[#115640];
+.status-cold{
+    @apply text-[#183057] bg-[#E1EBFA] rounded-sm font-light;
+}
+
+.status-warm{
+    @apply text-[#522504] bg-[#FFF1C2] rounded-sm font-light;
+}
+
+.status-hot{
+    @apply text-[#900B09] bg-[#FDD3D0] rounded-sm font-light
+}
+
+.status-deal{
+    @apply text-[#05261B] bg-[#CFE7DE] rounded-sm font-light;
 }
