--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -43,28 +43,37 @@ textarea:focus {
     outline: 0;
 }
 
+.select2-container {
+    width: 100% !important;
+}
+
 .select2-container .select2-selection--single {
-    height: 35px;
+    height: 40px !important;
+    background: #fff;
+    border: 1px solid #D9D9D9 !important;
+    border-radius: 0.5rem !important; /* rounded-lg */
+    display: flex !important;
+    align-items: center !important;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__rendered {
-    color: #444;
-    line-height: 32px;
-}
-
-.select2-container--default .select2-selection--single {
-    background-color: #fff;
-    border: 1px solid #d1d5db;
-    border-radius: 4px;
-}
-
-.select2-container .select2-selection--single .select2-selection__rendered {
-    padding-left: 10px;
+    color: #1E1E1E !important;
+    padding-left: 12px !important; /* px-3 */
+    padding-right: 12px !important;
+    line-height: normal !important;
+    font-size: 14px;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
-    top: 4px;
-    right: 4px;
+    height: 100% !important;
+    right: 8px !important;
+}
+
+/* Focus state ala Tailwind */
+.select2-container--open .select2-selection--single,
+.select2-container--default .select2-selection--single:focus {
+    border-color: #115640 !important;
+    box-shadow: 0 0 0 1px #115640 !important;
 }
 
 i.required {
