--- a/resources/css/flatpickr.css
+++ b/resources/css/flatpickr.css
@@ -1,6 +1,7 @@
 .flatpickr-calendar {
     @apply rounded-xl border border-gray-200 px-3 py-6;
     width: auto !important;
+    z-index: 99999 !important;
 }
 
 .flatpickr-months{
